# Aegis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Aegis.md  Aegis_Intro.md  Aegis_Protocol.md  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  QUICK_START.md  README.md  USAGE.md  USER_GUIDE.md  install-aegis.ps1  install.ps1  install.sh  pyproject.toml  update-aegis.ps1
.cursor/rules/: aegis.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
Aegis/rules/DevLogs/: 2026-06-05-aegis-toolchain-REQ-002.md  Aegis_P01_v3.1.0-feedback-improvements_2026-06-04.md
Aegis_Specs/: INDEX.md
Aegis_Specs/L2/v3.1.0-feedback-improvements/: design.md
Aegis_Specs/L3/aegis-toolchain/: 01-brainstorm.md  02-proposal.md  03-design.md  04-spec.md  05-tasks.md  06-review.md  07-verify.md
Aegis_Specs/L3/aegis-toolchain-phase2-mcp/: 01-brainstorm.md
Aegis_Specs/L3/aegis-toolchain-phase3-full-mcp/: 01-brainstorm.md
docs/: 07-verify.md  Aegis_Intro.md  Aegis_Protocol.md  USER_GUIDE.md  USER_SURVEY.md  USER_SURVEY_2026-06-02.md  feedback_2026-06-02_窗口自适应重构及AC04修复.md  survey-response_2026-06-03.md
rules/: global.md
rules/DevLogs/: README.md
rules/TechStack/: docker.md  python.md  rust.md  typescript.md  unity.md  unreal.md
skills/aegis-boot/: SKILL.md
skills/dev-workflow/: SKILL.md
skills/dev-workflow/conventions/: naming-and-formats.md
skills/dev-workflow/sub-agents/: code-reviewer.md  devils-advocate.md  security-auditor.md  ux-reviewer.md
skills/dev-workflow/templates/: design.md  meta-spec.md  proposal.md  spec-L2.md  spec-L3.md  tasks.md  verify.md
src/aegis_toolchain/: __init__.py  __main__.py
src/aegis_toolchain/cli/: advance.py  check.py  devlog.py  init_cmd.py  main.py  preprocess_cmd.py  start.py  status.py  upgrade_cmd.py
src/aegis_toolchain/core/: boundary_checker.py  classifier.py  index_manager.py  rule_loader.py  state_manager.py
src/aegis_toolchain/data/: AGENTS.md
src/aegis_toolchain/data/rules/: global.md
src/aegis_toolchain/data/rules/DevLogs/: README.md
src/aegis_toolchain/data/rules/TechStack/: cpp.md  go.md  java.md
src/aegis_toolchain/data/rules/TempData/: README.md  aegis_self_review_2026-06-01.md  agent-skills_anti-rationalization_2026-06-01.md  ai_coding_agent_principles_2026-06-01.md  ai_governance_security_review_2026-06-01.md  cursor_claude_rules_commands_2026-06-01.md  sdd_ecosystem_comparison_2026-06-01.md
src/aegis_toolchain/data/skills/aegis-boot/: SKILL.md
src/aegis_toolchain/data/skills/dev-workflow/: SKILL.md
src/aegis_toolchain/data/skills/dev-workflow/conventions/: naming-and-formats.md
src/aegis_toolchain/data/skills/dev-workflow/sub-agents/: ux-reviewer.md
src/aegis_toolchain/data/skills/dev-workflow/templates/: brainstorm.md  design.md  review-L2.md  review.md  spec-L2.md  spec-L3.md  tasks.md  verify-L2.md
src/aegis_toolchain/hooks/: pre_commit.py
src/aegis_toolchain/models/: config.py  state.py
src/aegis_toolchain/preprocessor/: injector.py
src/aegis_toolchain/utils/: fs.py  logging.py
tests/: conftest.py  helpers.py  test_boundary_checker.py  test_classifier.py  test_cli.py  test_fs.py  test_hooks.py  test_index_manager.py  test_models.py  test_rule_loader.py  test_state_manager.py
