[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "aegis-toolchain"
version = "5.0.0"
description = "Aegis AI 开发治理工具链 — 让流程约束从 AI 自律转向工具强制"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Aegis Team", email = "aegis@example.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["aegis", "ai", "workflow", "cli", "governance"]

dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.0,<3.0",
    "filelock>=3.0,<4.0",
    "loguru>=0.7,<1.0",
]

[project.urls]
Homepage = "https://github.com/Szy-Fxy/Aegis"
Repository = "https://github.com/Szy-Fxy/Aegis"

[project.scripts]
aegis = "aegis_toolchain.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[tool.poetry]
packages = [{include = "aegis_toolchain", from = "src"}]
include = [
    "src/aegis_toolchain/data/**/*.md",
    "src/aegis_toolchain/data/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
