[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-toolchain"
version = "5.2.1"
description = "Aegis AI 开发治理工具链 —— 让流程约束从 AI 自律转向工具强制"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.0,<3.0",
    "loguru>=0.7,<1.0",
    "filelock>=3.0,<4.0",
]

[project.scripts]
aegis = "aegis_toolchain.__main__:app"

[project.urls]
Homepage = "https://github.com/Szy-Fxy/Aegis"
Issues = "https://github.com/Szy-Fxy/Aegis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegis_toolchain = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
