[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-toolchain"
version = "5.2.2"
description = "Aegis AI 开发治理工具链 —— 让流程约束从 AI 自律转向工具强制"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.0,<3.0",
    "loguru>=0.7,<1.0",
    "filelock>=3.0,<4.0",
]

[project.scripts]
aegis = "aegis_toolchain.__main__:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/Szy-Fxy/Aegis"
Issues = "https://github.com/Szy-Fxy/Aegis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegis_toolchain = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/aegis_toolchain"]
omit = ["*/__pycache__/*"]

[tool.mypy]
python_version = "3.11"
files = ["src/aegis_toolchain", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001"]
